# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: main.yaml
configs/experiment/: example.yaml
src/: __init__.py  main.py
tests/units/: test_sample.py
